Add explicit log4j-script dependency in kafka tests
Signed-off-by: Matt Sicker <mattsicker@apache.org>

--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -256,6 +256,12 @@
         <artifactId>log4j-plugins-test</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <!-- Script plugins -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-script</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <!-- SLF4J 2.0.x Compatibility API -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
