Adapt tests to Kafka 3.3.1
Even if the `Producer` interface had some breaking changes between
version 1.1.1 and 3.3.1, our implementation extends `KafkaProducer`,
which hides those differences.

The only obstacle for upgrading `kafka-clients` are small differences in
tests. This PR adapts the existing tests to version 3.3.1 and provides a
GitHub action to test the `KafkaAppender` for multiple Kafka versions.

--- a/log4j-kafka/pom.xml
+++ b/log4j-kafka/pom.xml
@@ -39,10 +39,6 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api-test</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
     </dependency>
     <!-- Used for Kafka appender -->
@@ -52,7 +48,17 @@
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-script</artifactId>
       <scope>test</scope>
     </dependency>
     <!-- Required for AsyncLoggers -->
@@ -77,9 +83,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-script</artifactId>
-      <scope>test</scope>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
     </dependency>
   </dependencies>
   <build>
