Rollback JUnit Pioneer upgrade and othe test fixes
JUnit Pioneer 1.7.x moved system properties changes from @BeforeAll to
@BeforeEach, which breaks many our tests.

This also adds a test module descriptor to `log4j-jpl`.

--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -316,7 +316,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>${project.basedir}/src/main/java9</source>
+                <source>${project.basedir}/src/main/module</source>
               </sources>
             </configuration>
           </execution>
@@ -390,7 +390,7 @@
             <phase>prepare-package</phase>
             <configuration>
               <compileSourceRoots>
-                <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
+                <compileSourceRoot>${project.basedir}/src/main/module</compileSourceRoot>
               </compileSourceRoots>
             </configuration>
           </execution>
