--- a/log4j-api-test/pom.xml
+++ b/log4j-api-test/pom.xml
@@ -115,7 +115,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>${project.basedir}/src/main/java9</source>
+                <source>${project.basedir}/src/main/module</source>
               </sources>
             </configuration>
           </execution>
@@ -182,7 +182,7 @@
             <phase>prepare-package</phase>
             <configuration>
               <compileSourceRoots>
-                <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
+                <compileSourceRoot>${project.basedir}/src/main/module</compileSourceRoot>
               </compileSourceRoots>
             </configuration>
           </execution>
