--- a/pom.xml
+++ b/pom.xml
@@ -336,7 +336,8 @@
     <json-unit.version>2.35.0</json-unit.version>
     <junit.version>4.13.2</junit.version>
     <junit-jupiter.version>5.9.0</junit-jupiter.version>
-    <junit-pioneer.version>1.7.1</junit-pioneer.version>
+    <!-- Do not upgrade to 1.7.x until https://github.com/junit-pioneer/junit-pioneer/issues/623 is fixed -->
+    <junit-pioneer.version>1.6.2</junit-pioneer.version>
     <kafka.version>1.1.1</kafka.version>
     <kubernetes-client.version>4.6.1</kubernetes-client.version>
     <lightcouch.version>0.0.6</lightcouch.version>
