Add check for transitive deps mismatch
If the resolved version of a dep is older than one of the required ones,
we will notice and can decide to put it under dependency management.

--- a/pom.xml
+++ b/pom.xml
@@ -1510,6 +1510,25 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Check if transitive dependencies resolve to the highest required version -->
+      <!-- A failure here requires adding the dep to dependency management -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>enforce-upper-bound-deps</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <enforceUpperBoundDeps/>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
