Change dependabot schedule to monthly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,19 +16,17 @@
 #
 version: 2
 updates:
-  - package-ecosystem: maven
-    directory: "/"
-    schedule:
-      interval: daily
-      time: '04:00'
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: weekly
-
-  - package-ecosystem: "docker"
-    directory: "/"
-    schedule:
-      interval: weekly
+- package-ecosystem: maven
+  directory: "/"
+  schedule:
+    interval: monthly
+  open-pull-requests-limit: 50
+- package-ecosystem: github-actions
+  directory: /
+  schedule:
+    interval: monthly
+  open-pull-requests-limit: 5
+- package-ecosystem: "docker"
+  directory: "/"
+  schedule:
+    interval: weekly
