Add minimal checkstyle check
The `spotless` plugin check for import and whitespace problems in files
edited since 2022-10-01.

--- a/log4j-samples/pom.xml
+++ b/log4j-samples/pom.xml
@@ -28,6 +28,7 @@
   <name>Apache Log4j Samples</name>
   <url>http://maven.apache.org</url>
   <properties>
+    <log4jParentDir>${basedir}/..</log4jParentDir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <revapi.skip>true</revapi.skip>
 
