--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8   # 3.1.0
+        with:
+          fetch-depth: 32
 
       # JDK 11 is needed for the build.
       # Search `maven-toolchains-plugin` usages for details.
@@ -113,6 +115,8 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8   # 3.1.0
+        with:
+          fetch-depth: 32
 
       # JDK 11 is needed for the build.
       # Search `maven-toolchains-plugin` usages for details.
