Do not allow parallel tests in a class

--- a/log4j-api-test/pom.xml
+++ b/log4j-api-test/pom.xml
@@ -183,7 +183,8 @@
             <configurationParameters>
               <!-- LOG4J2-2921: use parallel test execution by default -->
               junit.jupiter.execution.parallel.enabled = true
-              junit.jupiter.execution.parallel.mode.default = concurrent
+              junit.jupiter.execution.parallel.mode.default = same_thread
+              junit.jupiter.execution.parallel.mode.classes.default = concurrent
             </configurationParameters>
           </properties>
           <reuseForks>true</reuseForks>
