--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,7 @@
     <!-- Properties in the format `<artifactId>.version` -->
     <!-- Spring Boot uses the same convention. -->
     <asciidoctor-maven-plugin.version>1.5.6</asciidoctor-maven-plugin.version>
+    <asm.version>9.4</asm.version>
     <build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
     <!-- checkstyle 10.0 requires Java 11 -->
     <checkstyle.version>9.3</checkstyle.version>
@@ -348,6 +349,7 @@
     <log4j2-logstash-layout.version>0.18</log4j2-logstash-layout.version>
     <logback.version>1.2.11</logback.version>
     <maven.version>3.8.6</maven.version>
+    <maven-plugin-tools.version>3.7.0</maven-plugin-tools.version>
     <mockito.version>4.8.1</mockito.version>
     <mongodb.version>4.0.3</mongodb.version>
     <nashorn.version>15.3</nashorn.version>
@@ -383,6 +385,13 @@
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-bom</artifactId>
         <version>${project.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-bom</artifactId>
+        <version>${asm.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -952,6 +961,16 @@
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-core</artifactId>
+        <version>${maven.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven.plugin-tools</groupId>
+        <artifactId>maven-plugin-annotations</artifactId>
+        <version>${maven-plugin-tools.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-plugin-api</artifactId>
         <version>${maven.version}</version>
       </dependency>
       <dependency>
@@ -1874,6 +1893,7 @@
     <module>log4j-docker</module>
     <module>log4j-flume-ng</module>
     <module>log4j-gctests</module>
+    <module>log4j-instrument</module>
     <module>log4j-iostreams</module>
     <module>log4j-jakarta-web</module>
     <module>log4j-jcl</module>
@@ -1896,6 +1916,7 @@
     <module>log4j-layout-template-json</module>
     <module>log4j-layout-template-json-test</module>
     <module>log4j-liquibase</module>
+    <module>log4j-maven-plugin</module>
     <module>log4j-mongodb3</module>
     <module>log4j-mongodb4</module>
     <module>log4j-osgi</module>
