--- a/pom.xml
+++ b/pom.xml
@@ -1661,6 +1661,19 @@
               <goal>check</goal>
             </goals>
           </execution>
+          <execution>
+            <id>apply-spotless</id>
+            <goals>
+              <goal>apply</goal>
+            </goals>
+            <phase>process-sources</phase>
+          </execution><execution>
+            <id>apply-spotless-test</id>
+            <goals>
+              <goal>apply</goal>
+            </goals>
+            <phase>process-test-sources</phase>
+          </execution>
         </executions>
       </plugin>
       <plugin>
