LOG4J2-2785 - Allow logger name to be abbreviated to the right-most n words

--- a/log4j-layout-template-json-test/pom.xml
+++ b/log4j-layout-template-json-test/pom.xml
@@ -37,6 +37,7 @@
     <projectDir>/log4j-layout-template-json</projectDir>
     <module.name>org.apache.logging.log4j.layout.template.json</module.name>
     <maven.doap.skip>true</maven.doap.skip>
+    <javadoc.skip>true</javadoc.skip>
   </properties>
 
   <dependencies>
