--- a/pom.xml
+++ b/pom.xml
@@ -1365,6 +1365,8 @@
             <exclude>**/fluent-bit.conf</exclude>
             <exclude>**/rabbitmq.config</exclude>
             <exclude>**/MANIFEST.MF</exclude>
+            <exclude>.surefire-*</exclude>
+            <exclude>src/changelog/**</exclude>
           </excludes>
         </configuration>
         <executions>
