Switch to "script" Maven Wrapper distribution
Having binaries in the repository is an unnecessary security risk.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@
 .project
 .idea
 **/*.iml
+/.metadata/
+/.mvn/wrapper/maven-wrapper.jar
+.project
+.settings
+.surefire-*
 **/target
 target/
 .settings
