Run `mvnw.cmd` to download wrapper

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,15 +66,22 @@ jobs:
 
       - name: Inspect environment (Linux)
         if: runner.os == 'Linux'
-        run: env | grep '^JAVA'
+        run: |
+          env | grep '^JAVA'
+          ./mvnw --version
 
       - name: Inspect environment (Windows)
         if: runner.os == 'Windows'
-        run: set java
+        shell: cmd
+        run: |
+          set JAVA
+          mvnw --version
 
       - name: Inspect environment (MacOS)
         if: runner.os == 'macOS'
-        run: env | grep '^JAVA'
+        run: |
+          env | grep '^JAVA'
+          ./mvnw --version
 
       - name: Maven "verify"
         timeout-minutes: 60
