Switch from `com.sun.mail` to Eclipse Angus
The first Angus Activation releases didn't work on Java 8, since their
class names collided with those embedded in the JRE. Since
eclipse-ee4j/angus-activation/#11 was solved in version 2.0.0, we can
replace the old unmaintained `com.sun.mail` artifacts with Eclipse
Angus.

Possible problems:

 * Eclipse Angus has a Jakarta EE 10 baseline (version 2.1 of Jakarta
   Activation and Mail API). I would prefer to keep a Jakarta EE 9
   baseline.
 * Spring Boot's
   [`spring-boot-starter-mail`](https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail/3.0.2)
   uses Angus, so we probably can ignore the previous point.
 * We need to use the `jakarta.mail` artifact, since Spring Boot does it and
   nobody likes exclusions.
 * The `angus-activation` artifact must be version 2.0.0 or higher,
 * The `jakarta.mail` artifact must be at most 1.1.0, since 2.0.0 was compiled
   with Java 9 (cf. eclipse-ee4j/angus-mail/#76).

--- a/log4j-jakarta-smtp/pom.xml
+++ b/log4j-jakarta-smtp/pom.xml
@@ -41,13 +41,11 @@
       <groupId>jakarta.activation</groupId>
       <artifactId>jakarta.activation-api</artifactId>
       <scope>provided</scope>
-      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>jakarta.mail</groupId>
       <artifactId>jakarta.mail-api</artifactId>
       <scope>provided</scope>
-      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
@@ -58,13 +56,13 @@
       <artifactId>log4j-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.sun.activation</groupId>
-      <artifactId>jakarta.activation</artifactId>
+      <groupId>org.eclipse.angus</groupId>
+      <artifactId>angus-activation</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>com.sun.mail</groupId>
-      <artifactId>smtp</artifactId>
+      <groupId>org.eclipse.angus</groupId>
+      <artifactId>jakarta.mail</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
