--- a/log4j-api-test/src/test/resources/META-INF/services/org.apache.logging.log4j.test.Service
+++ b/log4j-api-test/src/test/resources/META-INF/services/org.apache.logging.log4j.test.Service
@@ -13,4 +13,19 @@
 # See the license for the specific language governing permissions and
 # limitations under the license.
 
-org.apache.logging.log4j.util.test.Service2
+# A correct entry
+org.apache.logging.log4j.test.Service1
+
+# Simulates a service retrieved from the server's classloader in a servlet environment.
+# The class exists but does not extend org.apache.logging.log4j.test.Service
+org.apache.logging.log4j.Logger
+
+# Simulates a broken service.
+# Should cause a ClassNotFoundError
+invalid.Service
+
+# Causes an exception not caught by ServiceLoader
+org.apache.logging.log4j.test.ForceLinkageError
+
+# Another correct service
+org.apache.logging.log4j.test.Service2
