Rename POM Log4j* properties
Due to a `maven-bundle-plugin` bug, properties that start with a capital
letter end up in the manifest, hence we need to rename them.

--- a/log4j-distribution/pom.xml
+++ b/log4j-distribution/pom.xml
@@ -660,7 +660,7 @@
               <goal>sign</goal>
             </goals>
             <configuration>
-              <keyname>${Log4jSigningUserName}</keyname>
+              <keyname>${log4jSigningUserName}</keyname>
             </configuration>
           </execution>
         </executions>
