--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -32,6 +32,7 @@
   <properties>
     <maven.site.skip>true</maven.site.skip>
     <maven.site.deploy.skip>true</maven.site.deploy.skip>
+    <project.build.outputTimestamp>0</project.build.outputTimestamp>
   </properties>
 
   <dependencyManagement>
