Fix the team list link

--- a/pom.xml
+++ b/pom.xml
@@ -1697,6 +1697,20 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <inherited>false</inherited>
+        <executions>
+          <execution>
+            <id>team-list</id>
+            <phase>site</phase>
+            <goals>
+              <goal>team</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
