[maven-release-plugin] prepare release log4j-2.20.1-rc1

--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
     <groupId>org.apache.logging</groupId>
     <artifactId>logging-parent</artifactId>
     <version>7</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j</artifactId>
   <packaging>pom</packaging>
-  <version>2.19.1-SNAPSHOT</version>
+  <version>2.20.0</version>
 
   <name>Apache Log4j 2</name>
   <description>Apache Log4j 2</description>
@@ -224,7 +224,7 @@
     <connection>scm:git:https://github.com/apache/logging-log4j2.git</connection>
     <developerConnection>scm:git:https://github.com/apache/logging-log4j2.git</developerConnection>
     <url>https://github.com/apache/logging-log4j2</url>
-    <tag>log4j-${log4jReleaseVersion}</tag>
+    <tag>log4j-2.20.1-rc1</tag>
   </scm>
 
   <properties>
@@ -248,10 +248,10 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- Fixed `project.build.outputTimestamp` is required for reproducible builds: https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
-    <project.build.outputTimestamp>0</project.build.outputTimestamp>
+    <project.build.outputTimestamp>1676683261</project.build.outputTimestamp>
     <docLabel>Site Documentation</docLabel>
-    <projectDir/>
-    <module.name/>
+    <projectDir />
+    <module.name />
 
     <!-- ========================
          Site-specific properties
@@ -1285,7 +1285,7 @@
             <maxmem>1024</maxmem>
             <compilerArguments>
               <Xmaxwarns>10000</Xmaxwarns>
-              <Xlint/>
+              <Xlint />
             </compilerArguments>
           </configuration>
         </plugin>
@@ -1448,7 +1448,7 @@
             </goals>
             <configuration>
               <rules>
-                <requireUpperBoundDeps/>
+                <requireUpperBoundDeps />
               </rules>
             </configuration>
           </execution>
@@ -1498,8 +1498,8 @@
             <licenseHeader>
               <file>${log4jParentDir}/checkstyle-header.txt</file>
             </licenseHeader>
-            <trimTrailingWhitespace/>
-            <endWithNewline/>
+            <trimTrailingWhitespace />
+            <endWithNewline />
             <indent>
               <spaces>true</spaces>
               <spacesPerTab>4</spacesPerTab>
