--- a/log4j-api-test/pom.xml
+++ b/log4j-api-test/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.19.1-SNAPSHOT</version>
+    <version>2.20.0</version>
   </parent>
   <artifactId>log4j-api-test</artifactId>
   <packaging>jar</packaging>
@@ -113,7 +113,7 @@
           <instructions>
             <Fragment-Host>org.apache.logging.log4j.api</Fragment-Host>
             <Export-Package>org.apache.logging.log4j.*</Export-Package>
-            <Import-Package/>
+            <Import-Package />
           </instructions>
         </configuration>
       </plugin>
