--- a/log4j-jpl/pom.xml
+++ b/log4j-jpl/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
-    <version>2.19.1-SNAPSHOT</version>
+    <version>2.20.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -110,7 +110,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <excludes combine.self="override"/>
+          <excludes combine.self="override" />
         </configuration>
         <executions>
           <execution>
@@ -154,7 +154,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <!-- Disable forked VM as 2.21 yields https://issues.apache.org/jira/browse/SUREFIRE-720 -->
-            <configuration combine.self="override"/>
+            <configuration combine.self="override" />
             <executions>
               <execution>
                 <id>test</id>
