--- a/log4j-spring-cloud-config/pom.xml
+++ b/log4j-spring-cloud-config/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.19.1-SNAPSHOT</version>
+    <version>2.20.0</version>
   </parent>
 
   <artifactId>log4j-spring-cloud-config</artifactId>
